fix: make card item font smaller on mobile

--- a/src/components/molecules/CardMenuItem/styles.module.scss
+++ b/src/components/molecules/CardMenuItem/styles.module.scss
@@ -31,7 +31,7 @@
     padding-top: 1rem;
     display: flex;
     flex-direction: row;
-    gap: 1rem;
+    gap: 0.5rem;
 }
 
 .discount{
@@ -39,7 +39,7 @@
 }
 
 .item__name{
-    font-size: 1.2rem;
+    font-size: 1rem;
     font-weight:500;
 }
 
